[gd_scene load_steps=46 format=3 uid="uid://ija4ace48boo"]

[ext_resource type="Script" path="res://scripts/level_screen.gd" id="1_n3eih"]
[ext_resource type="StyleBox" uid="uid://b0nwus6s7t1i7" path="res://buttons/banner_button_hover.tres" id="2_4xgur"]
[ext_resource type="Texture2D" uid="uid://dv25i2oc2d7ee" path="res://assets/coins.png" id="2_x0f10"]
[ext_resource type="Texture2D" uid="uid://bbmk80ti6aig1" path="res://assets/item1.png" id="3_a5iyo"]
[ext_resource type="StyleBox" uid="uid://dgkak76a8ahtn" path="res://buttons/char_button.tres" id="3_b2gey"]
[ext_resource type="StyleBox" uid="uid://dmwro07qkhike" path="res://buttons/char_button_hover.tres" id="4_gvw18"]
[ext_resource type="Texture2D" uid="uid://dqwgcldvxvkw0" path="res://assets/item2.png" id="4_gxo05"]
[ext_resource type="Texture2D" uid="uid://daxd8xjambhkv" path="res://assets/item3.png" id="5_r8yea"]
[ext_resource type="Texture2D" uid="uid://cn5pbwwyojgh0" path="res://assets/tickets.png" id="6_f4mxa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5iytg"]
bg_color = Color(0.686275, 0.478431, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6bfhx"]
bg_color = Color(0.607843, 0.254902, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w43hv"]
bg_color = Color(0, 0.717647, 0.52549, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_364i7"]
bg_color = Color(0, 0.584314, 0.423529, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ebxy"]
bg_color = Color(0, 0.717647, 0.52549, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2ex6"]
bg_color = Color(1, 0.309804, 0.592157, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_etl06"]
bg_color = Color(0.74902, 0, 0.396078, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4i3h"]
bg_color = Color(1, 0.309804, 0.592157, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iv8hy"]
bg_color = Color(0, 0.666667, 0.87451, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yi367"]
bg_color = Color(0, 0.45098, 0.6, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nk2au"]
bg_color = Color(0, 0.666667, 0.87451, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_moqpj"]
bg_color = Color(1, 0.537255, 0.360784, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50ylo"]
bg_color = Color(0.984314, 0.360784, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pyknm"]
bg_color = Color(1, 0.537255, 0.360784, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0kppa"]
bg_color = Color(0.203922, 0.729412, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7nlo"]
bg_color = Color(0.152941, 0.576471, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyfe0"]
bg_color = Color(0.203922, 0.729412, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sr1a4"]
bg_color = Color(0.988235, 0, 0.964706, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qr8nr"]
bg_color = Color(0.701961, 0, 0.682353, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_57dcn"]
bg_color = Color(0.988235, 0, 0.964706, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0yb02"]
bg_color = Color(0.894118, 0.647059, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opglq"]
bg_color = Color(0.694118, 0.498039, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mf8ad"]
bg_color = Color(0.894118, 0.647059, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfcbi"]
bg_color = Color(0, 0.854902, 0.854902, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ybi1e"]
bg_color = Color(0, 0.639216, 0.639216, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7i6p"]
bg_color = Color(0, 0.854902, 0.854902, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4yews"]
bg_color = Color(1, 0.133333, 0.309804, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ddff"]
bg_color = Color(0.792157, 0, 0.219608, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xeu3h"]
bg_color = Color(1, 0.133333, 0.309804, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ji0ga"]
bg_color = Color(0.705882, 0.168627, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7tb6w"]
bg_color = Color(0.545098, 0.00392157, 0.788235, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_21e2g"]
bg_color = Color(0.705882, 0.168627, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5ftm"]
bg_color = Color(0.615686, 0.643137, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbcrb"]
bg_color = Color(0.45098, 0.47451, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f23qw"]
bg_color = Color(0.615686, 0.643137, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uov0p"]
bg_color = Color(1, 0.905882, 0.568627, 1)
corner_radius_top_right = 50

[node name="LevelScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1922.0
offset_bottom = 1083.0
script = ExtResource("1_n3eih")

[node name="ItemBar" type="Control" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
anchors_preset = 0
offset_right = 1928.0
offset_bottom = 40.0

[node name="CoinsLabel" type="Label" parent="ItemBar"]
layout_mode = 2
offset_left = 57.0
offset_top = 1.0
offset_right = 134.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 24
text = "Coins: "

[node name="Coins" type="Label" parent="ItemBar" groups=["Persist"]]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
offset_left = 138.0
offset_top = 1.0
offset_right = 288.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 2

[node name="Item1Label" type="Label" parent="ItemBar"]
layout_mode = 2
offset_left = 446.0
offset_top = 1.0
offset_right = 526.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 24
text = "Roses: "

[node name="Item1" type="Label" parent="ItemBar" groups=["Persist"]]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
offset_left = 530.0
offset_top = 1.0
offset_right = 680.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 2

[node name="Item2Label" type="Label" parent="ItemBar"]
layout_mode = 2
offset_left = 838.0
offset_top = 1.0
offset_right = 918.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 24
text = "Snowflakes: "

[node name="Item2" type="Label" parent="ItemBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
offset_left = 922.0
offset_top = 1.0
offset_right = 1072.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 2

[node name="Item3Label" type="Label" parent="ItemBar"]
layout_mode = 2
offset_left = 1230.0
offset_top = 1.0
offset_right = 1310.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 24
text = "Hearts: "

[node name="Item3" type="Label" parent="ItemBar" groups=["Persist"]]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
offset_left = 1314.0
offset_top = 1.0
offset_right = 1464.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 2

[node name="TicketLabel" type="Label" parent="ItemBar"]
layout_mode = 2
offset_left = 1622.0
offset_top = 1.0
offset_right = 1717.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 24
text = "Tickets: "

[node name="Tickets" type="Label" parent="ItemBar" groups=["Persist"]]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
offset_left = 1721.0
offset_top = 1.0
offset_right = 1871.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 2

[node name="coin" type="Sprite2D" parent="ItemBar"]
position = Vector2(25, 20)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_x0f10")

[node name="rose" type="Sprite2D" parent="ItemBar"]
position = Vector2(425, 20)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_a5iyo")

[node name="snowflake" type="Sprite2D" parent="ItemBar"]
position = Vector2(815, 20)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_gxo05")

[node name="heart" type="Sprite2D" parent="ItemBar"]
position = Vector2(1205, 20)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_r8yea")

[node name="ticket" type="Sprite2D" parent="ItemBar"]
position = Vector2(1600, 20)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_f4mxa")

[node name="Levels" type="Control" parent="."]
custom_minimum_size = Vector2(0, 930)
layout_direction = 1
layout_mode = 2
anchors_preset = 0
offset_top = 44.0
offset_right = 1928.0
offset_bottom = 974.0

[node name="Level1Button" type="Button" parent="Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 54.0
offset_top = 754.0
offset_right = 154.0
offset_bottom = 854.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_5iytg")
theme_override_styles/hover = SubResource("StyleBoxFlat_6bfhx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5iytg")
theme_override_styles/focus = SubResource("StyleBoxFlat_5iytg")
text = "Level 1"

[node name="Level2Button" type="Button" parent="Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 212.0
offset_top = 604.0
offset_right = 312.0
offset_bottom = 704.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_w43hv")
theme_override_styles/hover = SubResource("StyleBoxFlat_364i7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7ebxy")
text = "Level 2"

[node name="Level3Button" type="Button" parent="Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 370.0
offset_top = 679.0
offset_right = 470.0
offset_bottom = 779.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_q2ex6")
theme_override_styles/hover = SubResource("StyleBoxFlat_etl06")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e4i3h")
text = "Level 3"

[node name="Level4Button" type="Button" parent="Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 528.0
offset_top = 729.0
offset_right = 628.0
offset_bottom = 829.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_iv8hy")
theme_override_styles/hover = SubResource("StyleBoxFlat_yi367")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nk2au")
text = "Level 4"

[node name="Level5Button" type="Button" parent="Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 686.0
offset_top = 629.0
offset_right = 786.0
offset_bottom = 729.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_moqpj")
theme_override_styles/hover = SubResource("StyleBoxFlat_50ylo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pyknm")
text = "Level 5"

[node name="Level6Button" type="Button" parent="Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 844.0
offset_top = 554.0
offset_right = 944.0
offset_bottom = 654.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_0kppa")
theme_override_styles/hover = SubResource("StyleBoxFlat_k7nlo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jyfe0")
text = "Level 6"

[node name="Level7Button" type="Button" parent="Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 1002.0
offset_top = 679.0
offset_right = 1102.0
offset_bottom = 779.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_sr1a4")
theme_override_styles/hover = SubResource("StyleBoxFlat_qr8nr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_57dcn")
text = "Level 7"

[node name="Level8Button" type="Button" parent="Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 1160.0
offset_top = 579.0
offset_right = 1260.0
offset_bottom = 679.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_0yb02")
theme_override_styles/hover = SubResource("StyleBoxFlat_opglq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mf8ad")
text = "Level 8"

[node name="Level9Button" type="Button" parent="Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 1318.0
offset_top = 429.0
offset_right = 1418.0
offset_bottom = 529.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_dfcbi")
theme_override_styles/hover = SubResource("StyleBoxFlat_ybi1e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k7i6p")
text = "Level 9"

[node name="Level10Button" type="Button" parent="Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 1476.0
offset_top = 504.0
offset_right = 1576.0
offset_bottom = 604.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_4yews")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ddff")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xeu3h")
text = "Level 10"

[node name="Level11Button" type="Button" parent="Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 1634.0
offset_top = 329.0
offset_right = 1734.0
offset_bottom = 429.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_ji0ga")
theme_override_styles/hover = SubResource("StyleBoxFlat_7tb6w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_21e2g")
text = "Level 11"

[node name="Level12Button" type="Button" parent="Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 1792.0
offset_top = 204.0
offset_right = 1892.0
offset_bottom = 304.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_j5ftm")
theme_override_styles/hover = SubResource("StyleBoxFlat_vbcrb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f23qw")
text = "Level 12"

[node name="ButtomButtons" type="Control" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
anchors_preset = 0
offset_top = 978.0
offset_right = 1928.0
offset_bottom = 1078.0

[node name="BannerButton" type="Button" parent="ButtomButtons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
offset_right = 250.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_uov0p")
theme_override_styles/hover = ExtResource("2_4xgur")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uov0p")
theme_override_styles/focus = SubResource("StyleBoxFlat_uov0p")
text = "Banners"

[node name="CharButton" type="Button" parent="ButtomButtons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
offset_left = 1670.0
offset_right = 1920.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_b2gey")
theme_override_styles/hover = ExtResource("4_gvw18")
theme_override_styles/pressed = ExtResource("3_b2gey")
theme_override_styles/focus = ExtResource("3_b2gey")
text = "Characters"

[connection signal="pressed" from="Levels/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Levels/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="Levels/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="Levels/Level4Button" to="." method="_on_level_4_button_pressed"]
[connection signal="pressed" from="Levels/Level5Button" to="." method="_on_level_5_button_pressed"]
[connection signal="pressed" from="Levels/Level6Button" to="." method="_on_level_6_button_pressed"]
[connection signal="pressed" from="Levels/Level7Button" to="." method="_on_level_7_button_pressed"]
[connection signal="pressed" from="Levels/Level8Button" to="." method="_on_level_8_button_pressed"]
[connection signal="pressed" from="Levels/Level9Button" to="." method="_on_level_9_button_pressed"]
[connection signal="pressed" from="Levels/Level10Button" to="." method="_on_level_10_button_pressed"]
[connection signal="pressed" from="Levels/Level11Button" to="." method="_on_level_11_button_pressed"]
[connection signal="pressed" from="Levels/Level12Button" to="." method="_on_level_12_button_pressed"]
[connection signal="pressed" from="ButtomButtons/BannerButton" to="." method="_on_banner_button_pressed"]
[connection signal="pressed" from="ButtomButtons/CharButton" to="." method="_on_char_button_pressed"]
